--- a/app/src/main/res/layout/activity_contador.xml
+++ b/app/src/main/res/layout/activity_contador.xml
@@ -6,4 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".ContadorActivity">
 
+    <Button
+        android:id="@+id/btnInicaContadot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="124dp"
+        android:layout_marginBottom="236dp"
+        android:text="Iniciar Contador"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/txtContador"
+        app:layout_constraintStart_toStartOf="@+id/txtContador"
+        app:layout_constraintTop_toBottomOf="@+id/txtContador" />
+
+    <TextView
+        android:id="@+id/txtContador"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="243dp"
+        android:layout_marginEnd="152dp"
+        android:text="104"
+        android:textSize="60sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
