--- a/app/src/main/res/layout/activity_cronometro.xml
+++ b/app/src/main/res/layout/activity_cronometro.xml
@@ -6,4 +6,62 @@
     android:layout_height="match_parent"
     tools:context=".CronometroActivity">
 
+    <LinearLayout
+        android:layout_width="303dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="54dp"
+        android:layout_marginTop="128dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginBottom="96dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/timerText"
+            android:layout_width="match_parent"
+            android:layout_height="73dp"
+            android:text="00:00:00"
+            android:textAlignment="center"
+            android:textSize="60sp" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="52dp" />
+
+        <Button
+            android:id="@+id/btnIniciar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Iniciar Cuenta"
+            android:onClick="iniciarCuenta"/>
+
+        <Button
+            android:id="@+id/btnParar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Parar Cuenta"
+            android:onClick="pararCuenta"/>
+
+        <Button
+            android:id="@+id/btnRetomar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Retomar Cuenta"
+            android:onClick="retomarCuenta"/>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="188dp" />
+
+        <Button
+            android:id="@+id/btnLimpiar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Limpiar"
+            android:onClick="limpiarCuenta"/>
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
