Commit con todos los avances antes del deadline

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="hotpink">#FF69B4</color>
+    <color name="lightpink">#FFB6C1</color>
+    <color name="mistyrose">#FFE4E1</color>
+
 </resources>
