--- a/app/src/main/res/layout/activity_contador.xml
+++ b/app/src/main/res/layout/activity_contador.xml
@@ -12,11 +12,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="124dp"
         android:layout_marginBottom="236dp"
+        android:background="@color/hotpink"
+        android:backgroundTint="@color/lightpink"
         android:text="Iniciar Contador"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/txtContador"
         app:layout_constraintStart_toStartOf="@+id/txtContador"
-        app:layout_constraintTop_toBottomOf="@+id/txtContador" />
+        app:layout_constraintTop_toBottomOf="@+id/txtContador"
+        app:rippleColor="@color/hotpink" />
 
     <TextView
         android:id="@+id/txtContador"
