--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,9 @@
     <style name="Base.Theme.Lab02_IOT_20181650" parent="Theme.Material3.DayNight">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/lightpink</item>
+        <item name = "colorPrimaryDark">@color/hotpink</item>
+        <item name="colorAccent">@color/mistyrose</item>
     </style>
 
     <style name="Theme.Lab02_IOT_20181650" parent="Base.Theme.Lab02_IOT_20181650" />
